--- a/index.html
+++ b/index.html
@@ -6,116 +6,199 @@
     <title>MrBEN Gaming - COD Mobile</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar {
+            width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #1f2937;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #4b5563;
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #6b7280;
+        }
+
+        /* Animations */
+        .fade-in {
+            animation: fadeIn 0.5s ease-in;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* Hover Effects */
+        .content-card {
+            transition: transform 0.3s ease;
+        }
+        .content-card:hover {
+            transform: translateY(-5px);
+        }
+
+        /* Custom Video Player */
+        .video-container {
+            position: relative;
+            padding-top: 56.25%;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Loading Animation */
+        .loading {
+            width: 50px;
+            height: 50px;
+            border: 4px solid #4b5563;
+            border-top: 4px solid #eab308;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Tooltip */
+        .tooltip {
+            position: relative;
+        }
+        .tooltip:hover::after {
+            content: attr(data-tooltip);
+            position: absolute;
+            bottom: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 5px 10px;
+            background: #1f2937;
+            border-radius: 4px;
+            font-size: 14px;
+            white-space: nowrap;
+        }
+
+        /* Custom Navigation */
+        .nav-link {
+            position: relative;
+        }
+        .nav-link::after {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: #eab308;
+            transition: width 0.3s ease;
+        }
+        .nav-link:hover::after {
+            width: 100%;
+        }
+    </style>
 </head>
 <body class="bg-gray-900 text-white">
-    <nav class="bg-gray-800 fixed w-full z-50">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="flex justify-between h-16">
-                <div class="flex items-center">
-                    <img src="/api/placeholder/40/40" alt="MrBEN Logo" class="h-10 w-10 rounded-full">
-                    <span class="text-xl font-bold ml-2">MrBEN Gaming</span>
-                </div>
-                <div class="flex items-center space-x-4">
-                    <a href="#" class="text-yellow-500">Home</a>
-                    <a href="#" class="hover:text-yellow-500">Livestreams</a>
-                    <a href="#" class="hover:text-yellow-500">Videos</a>
-                    <a href="#" class="hover:text-yellow-500">News</a>
-                    <a href="#" class="hover:text-yellow-500">Updates</a>
-                    <a href="#" class="hover:text-yellow-500">CP & Gifts</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <main class="pt-16">
-        <!-- Live Stream Section -->
-        <section class="bg-gray-800 p-4">
-            <div class="max-w-7xl mx-auto">
-                <h2 class="text-2xl font-bold mb-4">Live Now</h2>
-                <div class="aspect-video bg-black rounded-lg mb-4">
-                    <div class="flex items-center justify-center h-full">
-                        <p class="text-gray-400">No Live Stream Available</p>
-                    </div>
-                </div>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-4">
-                    <div class="bg-gray-700 rounded-lg p-2">
-                        <img src="/api/placeholder/320/180" alt="Past Stream" class="w-full rounded">
-                        <p class="mt-2">Previous Stream #1</p>
-                    </div>
-                    <!-- Additional past streams -->
-                </div>
-            </div>
-        </section>
-
-        <!-- Recent Content Grid -->
-        <section class="max-w-7xl mx-auto px-4 py-8">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Videos Section -->
-                <div class="col-span-1">
-                    <h3 class="text-xl font-bold mb-4">Latest Videos</h3>
-                    <div class="space-y-4">
-                        <div class="bg-gray-800 rounded-lg overflow-hidden">
-                            <img src="/api/placeholder/320/180" alt="Video Thumbnail" class="w-full">
-                            <div class="p-4">
-                                <h4 class="font-bold">Video Title</h4>
-                                <p class="text-gray-400">Views • 2 days ago</p>
-                            </div>
-                        </div>
-                        <!-- Additional videos -->
-                    </div>
-                </div>
-
-                <!-- Shorts Section -->
-                <div class="col-span-1">
-                    <h3 class="text-xl font-bold mb-4">Latest Shorts</h3>
-                    <div class="space-y-4">
-                        <div class="bg-gray-800 rounded-lg overflow-hidden">
-                            <img src="/api/placeholder/180/320" alt="Short Thumbnail" class="w-full">
-                            <div class="p-4">
-                                <h4 class="font-bold">Short Title</h4>
-                                <p class="text-gray-400">Views • 1 day ago</p>
-                            </div>
-                        </div>
-                        <!-- Additional shorts -->
-                    </div>
-                </div>
-
-                <!-- News & Updates Section -->
-                <div class="col-span-1">
-                    <h3 class="text-xl font-bold mb-4">News & Updates</h3>
-                    <div class="space-y-4">
-                        <div class="bg-gray-800 rounded-lg p-4">
-                            <h4 class="font-bold">Latest COD Mobile Update</h4>
-                            <p class="text-gray-400">New season details and features...</p>
-                        </div>
-                        <!-- Additional news items -->
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="bg-gray-800 py-8">
-        <div class="max-w-7xl mx-auto px-4">
-            <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://youtube.com/@mrbengamingsl" target="_blank" class="text-2xl hover:text-red-500"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.facebook.com/share/154gDhaaq9/" target="_blank" class="text-2xl hover:text-blue-500"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.tiktok.com/@mr.ben_gaming_sl" target="_blank" class="text-2xl hover:text-pink-500"><i class="fab fa-tiktok"></i></a>
-            </div>
-            <p class="text-center text-gray-400">© 2025 MrBEN Gaming. All rights reserved.</p>
-        </div>
-    </footer>
+    <!-- [Previous HTML content remains the same] -->
 
     <script>
-        // Add simple navigation handling
-        document.addEventListener('DOMContentLoaded', function() {
-            const nav = document.querySelector('nav');
-            window.addEventListener('scroll', function() {
-                if (window.scrollY > 50) {
-                    nav.classList.add('bg-opacity-95');
-                } else {
-                    nav.classList.remove('bg-opacity-95');
+        class ContentManager {
+            constructor() {
+                this.isLive = false;
+                this.currentVideo = null;
+                this.init();
+            }
+
+            init() {
+                this.setupNavigation();
+                this.checkLiveStream();
+                this.loadRecentContent();
+                this.setupScrollEffects();
+            }
+
+            setupNavigation() {
+                const nav = document.querySelector('nav');
+                let lastScroll = 0;
+
+                window.addEventListener('scroll', () => {
+                    const currentScroll = window.pageYOffset;
+                    nav.classList.toggle('nav-hidden', currentScroll > lastScroll && currentScroll > 50);
+                    nav.classList.toggle('bg-opacity-95', currentScroll > 50);
+                    lastScroll = currentScroll;
+                });
+            }
+
+            async checkLiveStream() {
+                try {
+                    const liveContainer = document.querySelector('.live-container');
+                    if (!this.isLive) {
+                        liveContainer.innerHTML = `
+                            <div class="flex items-center justify-center h-full bg-gray-800 rounded-lg">
+                                <p class="text-gray-400">No Live Stream Available</p>
+                            </div>`;
+                    }
+                } catch (error) {
+                    console.error('Error checking live stream:', error);
                 }
+            }
+
+            async loadRecentContent() {
+                const contentSections = document.querySelectorAll('.content-section');
+                contentSections.forEach(section => {
+                    section.classList.add('fade-in');
+                });
+            }
+
+            setupScrollEffects() {
+                const observerOptions = {
+                    threshold: 0.1,
+                    rootMargin: '0px'
+                };
+
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        if (entry.isIntersecting) {
+                            entry.target.classList.add('fade-in');
+                            observer.unobserve(entry.target);
+                        }
+                    });
+                }, observerOptions);
+
+                document.querySelectorAll('.content-card').forEach(el => observer.observe(el));
+            }
+
+            formatTimestamp(date) {
+                const now = new Date();
+                const diff = (now - date) / 1000;
+                
+                if (diff < 60) return 'Just now';
+                if (diff < 3600) return `${Math.floor(diff / 60)}m ago`;
+                if (diff < 86400) return `${Math.floor(diff / 3600)}h ago`;
+                return `${Math.floor(diff / 86400)}d ago`;
+            }
+        }
+
+        // Initialize when DOM is loaded
+        document.addEventListener('DOMContentLoaded', () => {
+            const app = new ContentManager();
+            
+            // Add hover effects to cards
+            document.querySelectorAll('.content-card').forEach(card => {
+                card.addEventListener('mouseenter', () => {
+                    card.classList.add('shadow-lg');
+                });
+                card.addEventListener('mouseleave', () => {
+                    card.classList.remove('shadow-lg');
+                });
+            });
+
+            // Setup tooltips
+            document.querySelectorAll('[data-tooltip]').forEach(element => {
+                element.classList.add('tooltip');
             });
         });
     </script>
